--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@ section {
   background-color: white;
 
 }
+#services >ul>li{
+    list-style: none;
+}
 
 form {
   display: flex;
@@ -87,11 +90,11 @@ form input, form select, form textarea {
   font-size: 1rem;
 }
 p{
-   text-align: center; 
+   text-align: center;
 }
 
 button {
- 
+
   background-color: #FF0000;
   color: white;
   padding: 0.5rem 1rem;
