--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ header {
     background-color: #007BFF;
     color: white;
     padding: 1rem 2rem;
+
+}
+header p {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 nav {
@@ -85,6 +92,8 @@ section {
 
 form {
     display: flex;
+    padding: 20px;
+    margin: 80px;
     flex-direction: column;
     gap: 1rem;
 }
@@ -92,7 +101,7 @@ form {
 form input,
 form select,
 form textarea {
-    padding: 0.5rem;
+    padding: 0.2rem;
     font-size: 1rem;
 }
 
